# criminalMindPP

./: .gitignore  Achievement.cpp  Achievement.hpp  CMakeLists.txt  CaseEditor.cpp  CaseEditor.hpp  Engine.cpp  Engine.hpp  Game.cpp  Game.hpp  LICENSE  Pista.cpp  Pista.hpp  README.md  Suspeito.cpp  Suspeito.hpp  main.cpp  utils.hpp
data/: casos.txt  pistas_base.txt  suspeitos_base.txt
sounds/: README.txt
